# data-leak-detector

./: README.md  check_url.py  hotspot.conf  nohup.out  predict_conn_models.py  predict_dns_models.py  pyproject.toml  setup.sh  start.py  stremlit.py  train_conn_models.py  train_dns_models.py
app/: __init__.py  settings.py
app/hotspot/: __init__.py  access_point.py
assets/databases/: .~lock.malicious_phish.csv#
assets/models/: randomforest_dns_model.pickle  to_matrix_conn.pickle  to_matrix_dns.pickle
workdir/: capture.pcap
